--- a/app/views/static_pages/privatevisitors.html.erb
+++ b/app/views/static_pages/privatevisitors.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div class="col-lg-12 mb-5">
         <div class="progress">
-          <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-success" role="progressbar" style="width: ;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     </div>
   </div>
