resolving display comment in post

--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Panier | Raidators" %>
 
-<div class="container mt-5">
+<div class="container-fluid mt-3 mb-5 light-background-raidators ">
 
   <!--Section: Content-->
   <section class="">
