--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -4,7 +4,7 @@
   <% if current_user && current_user.admin %>
     <% content_for :title, "Admin | Raidators" %>
 
-    <div class="container my-5 py-5  form-background-raidators">
+    <div class="my-5 py-5  form-background-raidators">
 
       <!-- Section: Block Content -->
       <section>
