review of card product

--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -4,7 +4,7 @@
   <% if current_user && current_user.admin %>
     <% content_for :title, "Admin | Raidators" %>
 
-    <div class="my-5 py-5  form-background-raidators">
+    <div class="my-5 py-5 form-background-raidators">
 
       <!-- Section: Block Content -->
       <section>
@@ -110,8 +110,7 @@
     
     </div>
 
-    <div class="container my-5 ">
-
+    <div class="my-5 ">
       
       <!-- Section: Block Content -->
       <section>
@@ -169,8 +168,7 @@
 
 
   <% else %>
-    <% content_for :title, "Profil | Raidators" %>
-
+  
     <div class="container mt-5">
 
       <!-- div: Block Content -->
