--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -1,14 +1,15 @@
 <% content_for :title, "Panier | Raidators" %>
 
-<div class="container-fluid mt-3 mb-5 light-background-raidators ">
+<div class="container-fluid mt-3 mb-5 light-background-raidators">
 
   <!--Section: Content-->
-  <section class="">
-
-    <div class="card">
+  <div class="container mt-5">
+    <div class="card card-list content-full-size-div-raidator card-rounded-raidators">
+      <div class="card-header card-header d-flex justify-content-between align-items-center  dark-color-raidator text-white top-corner-radius-card-image-raidators">
+        <h3 class="mb-0 text-white">Mon Panier </h3>
+      </div>
       <div class="card-body">
-        <h1>Mon Panier </h1>
-
+      
         <!--Grid row-->
         <div class="row">
 
@@ -142,7 +143,7 @@
       </div>
     </div>
 
-  </section>
+  </div>
   <!--Section: Content-->
   
 </div>
