--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -5,7 +5,7 @@
   <!-- Container introduction and how to help -->
   <div class="container mt-5">
     <!--Section: Content-->
-    <section class="">
+    <section>
       <!-- Section heading -->
       <h2 class="text-left mb-5">Donner accès à l'éducation</h2>
       <p class="text-left mb-5">L'Europ.Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
@@ -154,7 +154,7 @@
 
 <section class="light-background-raidators">
   <div class="container align-items-center">
-    <h3 class="text-left mb-5">La liste de matériel</h2>
+    <h3 class="text-left mb-5">La liste de matériel</h3>
     <section>
       <!--First row-->
       <div class="row">
