--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -1,21 +1,17 @@
 <% content_for :title, "Panier | Raidators" %>
 
 <div class="container-fluid mt-3 mb-5 light-background-raidators">
-
   <!--Section: Content-->
   <div class="container mt-5">
     <div class="card card-list content-full-size-div-raidator card-rounded-raidators">
-      <div class="card-header card-header d-flex justify-content-between align-items-center  dark-color-raidator text-white top-corner-radius-card-image-raidators">
+      <div class="card-header card-header d-flex justify-content-between align-items-center dark-color-raidator text-white top-corner-radius-card-image-raidators">
         <h3 class="mb-0 text-white">Mon Panier </h3>
       </div>
       <div class="card-body">
-      
         <!--Grid row-->
         <div class="row">
-
           <!--Grid column-->
           <div class="col-lg-8">
-
             <!-- Pills navs -->
             <ul class="nav md-pills nav-justified pills-primary ">
               <li class="nav-item">
@@ -25,7 +21,6 @@
 
             <!-- Pills panels -->
             <div class="tab-content pt-4">
-
               <!--Panel 2-->
               <div class="tab-pane fade in show active" id="tabCheckoutAddons123" role="tabpanel">
 
@@ -37,7 +32,7 @@
                     <div class="col-md-5 mb-4">
                       <% @cart.selected_products.each do |myproduct| %> 
                         <hr class="mb-5">
-                        <img class="img-fluid" alt="Second sample image"> <%=myproduct.product.image_url %> </img>
+                        <%= image_tag myproduct.product.image_url, width: "100%", class:"card-img-top card-rounded-raidators", alt:"Card image cap" %> 
                       <% end %>
   
                     </div>
@@ -47,15 +42,14 @@
                     <div class="col-md-7 mb-4">
                       <% @cart.selected_products.each do |myproduct| %> 
                         <hr class="mb-5">
-                        <h3 class="mb-3 h3"><%= myproduct.product.title %></h3>
+                        <p class="mb-3 h3"><%= myproduct.product.title %></p>
                         <p>Description</p>
-  
-                        <!--Name-->
+                        <%= myproduct.product.description %>
                         
                         <p>Quantité : <%= myproduct.quantity %></p>
 
-                        <h3> Prix: <%= myproduct.product.price %>€</h3>
-                        <%= button_to 'Supprimer', myproduct, method: :delete, class: 'btn btn-danger btn-md btn-rounded mx-6'%>
+                        <p> Prix: <%= myproduct.product.price %>€</p>
+                        <%= button_to 'Supprimer', myproduct, method: :delete, class: 'btn btn-outline-primary p-2 mt-2 btn-warning-raidators btn-md'%>
           
                       <% end %>
 
@@ -75,21 +69,16 @@
 
               </div>
               <!--/.Panel 2-->
-
             </div>
             <!-- Pills panels -->
-
-
           </div>
           <!--Grid column-->
 
           <!--Grid column-->
 
           <div class="col-lg-4 mb-4">
-
             <!--Card-->
-            <div class="card  border border-light rounded-0">
-
+            <div class="card border border-light rounded-0">
               <!--Card content-->
               <div class="card-body">
                 <p class="mb-4 mt-1 text-center ">Résumé</p>
@@ -101,14 +90,10 @@
                     </dd>
                     <dd class="col-sm-4">
                       <p><%= myproduct.product.price %>€</p>
-
                       <%= myproduct.quantity * myproduct.product.price %>
                     </dd>
                   </dl>
-
                 <% end %>
-
-    
                 <hr>
                 <% if @cart.selected_products.length != 0 %>
                   <dl class="row">
@@ -128,22 +113,14 @@
                   <%= render 'stripe' %>
                 </div>
               </div>
-
-              </div>
-
             </div>
             <!--/.Card-->
-
           </div>
           <!--Grid column-->
-
         </div>
         <!--Grid row-->
-
       </div>
     </div>
-
   </div>
   <!--Section: Content-->
-  
 </div>
