--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="carousel-caption">
-          <h1 class="h3-responsive text-white">La solidarité n'a pas de frontière</h1>
+          <h1 class="text-white">La solidarité n'a pas de frontière</h1>
           <p>Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. <br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
           <%= link_to 'Nous soutenir', products_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
         </div>
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="carousel-caption">
-          <h1 class="h3-responsive text-white">La solidarité n'a pas de frontière</h1>
+          <h1 class="text-white">La solidarité n'a pas de frontière</h1>
           <p>Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
           <%= link_to 'Nous soutenir', products_path, class: "btn btn-success  btn-raidators text-white p-2 mx-0"%>
         </div>
