--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -210,8 +210,8 @@
         <div class="row">
           
           <div class="card card-list content-full-size-div-raidator card-rounded-raidators">
-            <div class="card-header d-flex justify-content-between align-items-center  dark-color-raidator text-white top-corner-radius-card-image-raidators ">
-              <h3 class="mb-0">Vos commandes</h3>
+            <div class="card-header d-flex justify-content-between align-items-center  dark-color-raidator top-corner-radius-card-image-raidators ">
+              <p class="mb-0 text-white ">Vos commandes</p>
             </div>
             <div class="card-body">
               <table class="table">
