--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -1,7 +1,6 @@
 <% content_for :title, "Panier | Raidators" %>
 
 <div class="container-fluid mt-3 mb-5 light-background-raidators">
-  <!--Section: Content-->
   <div class="container mt-5">
     <div class="card card-list content-full-size-div-raidator card-rounded-raidators">
       <div class="card-header card-header d-flex justify-content-between align-items-center dark-color-raidator text-white top-corner-radius-card-image-raidators">
@@ -12,61 +11,37 @@
         <div class="row">
           <!--Grid column-->
           <div class="col-lg-8">
-            <!-- Pills navs -->
-            <ul class="nav md-pills nav-justified pills-primary ">
-              <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#tabCheckoutAddons123" role="tab">Produit</a>
-              </li>
-            </ul>
-
             <!-- Pills panels -->
             <div class="tab-content pt-4">
               <!--Panel 2-->
-              <div class="tab-pane fade in show active" id="tabCheckoutAddons123" role="tabpanel">
-
+              <div>
                 <!--Grid row-->
-                <form>
+                <% @cart.selected_products.each do |myproduct| %> 
                   <div class="row">
-  
                     <!--Grid column-->
                     <div class="col-md-5 mb-4">
-                      <% @cart.selected_products.each do |myproduct| %> 
-                        <hr class="mb-5">
-                        <%= image_tag myproduct.product.image_url, width: "100%", class:"card-img-top card-rounded-raidators", alt:"Card image cap" %> 
-                      <% end %>
-  
+                      <hr class="mb-5">
+                      <%= image_tag myproduct.product.image_url, width: "100%", class:"card-img-top card-rounded-raidators", alt:"Card image cap" %> 
                     </div>
-                    <!--Grid column-->
-  
                     <!--Grid column-->
                     <div class="col-md-7 mb-4">
-                      <% @cart.selected_products.each do |myproduct| %> 
-                        <hr class="mb-5">
-                        <p class="mb-3 h3"><%= myproduct.product.title %></p>
-                        <p>Description</p>
-                        <%= myproduct.product.description %>
-                        
-                        <p>Quantité : <%= myproduct.quantity %></p>
-
-                        <p> Prix: <%= myproduct.product.price %>€</p>
-                        <%= button_to 'Supprimer', myproduct, method: :delete, class: 'btn btn-outline-primary p-2 mt-2 btn-warning-raidators btn-md'%>
-          
-                      <% end %>
-
+                      <hr class="mb-5">
+                      <p class="mb-3 h3"><%= myproduct.product.title %></p>
+                      <p>Description<%= myproduct.product.description %></p>
+                      <p>Quantité : <%= myproduct.quantity %></p>
+                      <p> Prix: <%= myproduct.product.price %>€</p>
+                      <%= button_to 'Supprimer', myproduct, method: :delete, class: 'btn btn-outline-primary p-2 mt-2 btn-warning-raidators btn-md'%>
+                      
                       <% if @cart.selected_products.length != 0 %>
                       <% else %>
-                        <p> Votre panier est vide </p>
+                        <p> Votre panier est vide. </p>
                       <% end %>
-
                     </div>
                     <!--Grid column-->
-  
                   </div>
                   <!--Grid row-->
-                </form>
+                <% end %>
                 <hr class="mb-5">
-
-
               </div>
               <!--/.Panel 2-->
             </div>
@@ -75,7 +50,6 @@
           <!--Grid column-->
 
           <!--Grid column-->
-
           <div class="col-lg-4 mb-4">
             <!--Card-->
             <div class="card border border-light rounded-0">
@@ -122,5 +96,4 @@
       </div>
     </div>
   </div>
-  <!--Section: Content-->
 </div>
