front edit product v1

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -152,7 +152,7 @@ section{
   margin-bottom:5% ;
 }
 
-.dark-color-raidator{
+.dark-background-raidators{
   background-color: #1B221D;
 }
 /* ------------Banner------------ */
