--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,20 +1,44 @@
+<% content_for :title, "Modification produit | Raidators" %>
+<div class="container-fluid mt-3 mb-5 dark-background-raidators">
+  <section>
+    <div class="col-lg-8 col-md-6 mt-5 mb-5 form-background-raidators">
+      <div class="container my-5">
+        <h3 class="text-center pb-2">Modifier le produit</h3>
+        <!--Grid row-->
+          <div class="row d-flex align-items-center justify-content-center form-background-raidators">
+            <!--Grid column-->
+            <div class="col-md-6 col-xl-8">
+              <!--Form-->
+              <div class="card">
+                <div class="card-body px-4">
+                  <%= form_for @product do |f| %>
 
-<%= form_for @product do |f| %>
+                    <div class="form-group">
+                    <%= f.label :titre %>
+                    <%= f.text_field :title, class:"form-control form-control-raidators" %>
+                    </div>
 
-  <div class="form-group">
-  <%= f.text_field :title, class:"form-control" %>
-  </div>
+                    <div class="form_group">
+                    <%= f.label :prix %>
+                    <%= f.text_field :price, class: "form-control form-control-raidators" %>
+                    </div>
 
-  <div class="form_group">
-  <%= f.text_field :price, class: 'form-control' %>
-  </div>
+                    <div class="form-group">
+                    <%= f.label :description %>
+                    <%= f.text_area :description, class: "form-control form-control-raidators" %>
+                    </div>
 
-  <div class="form-group">
-  <%= f.text_area :description, class: 'form-control' %>
-  </div>
+                    <div class="form-group">
+                    <%= f.submit " Modifier le don /produits",class:"btn btn-primary btn-md btn-dark-raidators mx-0" %>
+                    </div>
 
-  <div class="form-group">
-  <button class="btn-primary" type="submit"> Modifier le don /produits </button>
-  </div>
-
-  <%end%>
+                  <%end%>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
