--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-3 mb-5 light-background-raidators">
   <div class="container mt-5">
     <div class="card card-list content-full-size-div-raidator card-rounded-raidators">
-      <div class="card-header card-header d-flex justify-content-between align-items-center dark-color-raidator text-white top-corner-radius-card-image-raidators">
+      <div class="card-header card-header d-flex justify-content-between align-items-center dark-background-raidator text-white top-corner-radius-card-image-raidators">
         <h3 class="mb-0 text-white">Description Produit </h3>
       </div>
       <div class="card-body">
