--- a/app/views/static_pages/privatevisitors.html.erb
+++ b/app/views/static_pages/privatevisitors.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Privatevisitors | Raidators" %>
+<% content_for :title, "Particuliers | Raidators" %>
 <%= render :partial => "shared/banner" %>
 
 <section>
