fix bug when retrun paiment

--- a/app/views/checkout/cancel.html.erb
+++ b/app/views/checkout/cancel.html.erb
@@ -1,4 +1,21 @@
 <div class="container text-center my-5">
+<br>
+<br>
+<br>
+<br>
   <h1>Echec</h1>
-  <p>Le statut de votre paiement <%= @payment_intent.status %>.</p>
+  <h2>Le paiement a échoué.</h2>
+  <br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+<br>
 </div>
