--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -20,18 +20,19 @@
   </div>
 
   <div class="form-group">
-  <%= f.text_area :image_url, placeholder: 'Image_url', class: 'form-control' %>
+    <%= form_tag product_product_pictures_path(:product_id), multipart: true do %>
+    <%= file_field_tag :product_picture %>
+    <%= submit_tag "Ajouter" %>
+    <% end %>
   </div>
 
   <div class="form-group">
   <%= f.text_field :category, placeholder: 'Catégorie', class: 'form-control' %>
   </div>
   
-  <div class="form-group">
-  <button class="btn-primary" type="submit"> Valider le dons /produits </button>
+  <div class="actions text-center my-3">
+  <%= f.submit "Valider le don/produit", class:"btn btn-primary btn-dark-raidators" %>
   </div>
-
-
 
   <%end%>
   
