changes to commit on this branch

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,7 @@
 
   <div class="col-lg-6 col-md-4 form-background-raidators">
     <div class="container py-5 my-5">
-      <h3 class="text-center pb-2">Bonjour</h3>
+      <h3 class="text-center pb-2">Nouvel article</h3>
       <%= form_for @post do |editpost| %>
 
         <div class="form-group">
