--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -1,45 +1,75 @@
+<% content_for :title, "Nouvelle adresse | Raidators" %>
+<!-- Main navigation -->
+<div class="container-fluid mt-3 mb-5 light-background-raidators">
 
-<%= form_for Address.create do |f| %>
+  <!-- Full Page Intro -->
+  <section class:"image-edit-registration">
+    <!-- background -->
+    <div class="col-lg-6 col-md-4 form-background-raidators">
+      <!-- Content -->
+      <div class="container my-5">     
+        <h3 class="text-center pb-2">Modifier mon mot de passe</h3>
+        <!--Grid row-->
+        <div class="row d-flex align-items-center justify-content-center form-background-raidators">
+          <!--Grid column-->
+          <div class="col-md-6 col-xl-8">
+            <!--Form-->
+            <div class="card">
+              <div class="card-body px-4">
+                <%= form_for Address.create do |f| %>
 
-  <div class="form-group">
-  <%= f.text_field :first_name, placeholder: 'Prénom', class:"form-control" %>
-  </div>
+                  <div class="form-group">
+                    <%= f.text_field :first_name, placeholder: 'Prénom', class:"form-control form-control-raidators" %>
+                  </div>
 
-  <div class="form_group">
-  <%= f.text_field :last_name, placeholder: 'Nom',  class: 'form-control' %>
-  </div>
+                  <div class="form_group">
+                    <%= f.text_field :last_name, placeholder: 'Nom',  class: 'form-control form-control-raidators' %>
+                  </div>
 
-  <div class="form-group">
-  <%= f.text_field :street_number, placeholder: 'Numéro de rue', class: 'form-control' %>
-  </div>
+                  <div class="form-group">
+                    <%= f.text_field :street_number, placeholder: 'Numéro de rue', class: 'form-control form-control-raidators' %>
+                  </div>
 
-  <div class="form-group">
-  <%= f.text_field :street, placeholder: 'Rue', class: 'form-control' %>
-  </div>
+                  <div class="form-group">
+                    <%= f.text_field :street, placeholder: 'Rue', class: 'form-control form-control-raidators' %>
+                  </div>
 
-  <div class="form-group">
-  <%= f.text_field :zip_code , placeholder: 'Code Postal', class: 'form-control' %>
-  </div>
+                  <div class="form-group">
+                    <%= f.text_field :zip_code , placeholder: 'Code Postal', class: 'form-control  form-control-raidators' %>
+                  </div>
 
-  <div class="form-group">
-  <%= f.text_field :city, placeholder: 'Ville', class: 'form-control' %>
-  </div>
+                  <div class="form-group">
+                    <%= f.text_field :city, placeholder: 'Ville', class: 'form-control  form-control-raidators' %>
+                  </div>
 
-  <div class="form-group">
-  <%= f.text_field :country , placeholder: 'Pays', class: 'form-control' %>
-  </div>
+                  <div class="form-group">
+                    <%= f.text_field :country , placeholder: 'Pays', class: 'form-control form-control-raidators' %>
+                  </div>
 
-  <div class="form-group">
-  <%= f.text_field :phone_number, placeholder: 'Téléphone', class: 'form-control' %>
-  </div>
+                  <div class="form-group">
+                    <%= f.text_field :phone_number, placeholder: 'Téléphone', class: 'form-control form-control-raidators' %>
+                  </div>
 
+                  <div class="form-group">
+                   <%= f.text_field :company_name, placeholder: 'Nom de lentreprise', class: 'form-control-raidators mt-3' %>
+                  </div>
 
-  <div class="form-group">
-  <%= f.text_field :company_name, placeholder: 'Nom de lentreprise', class: 'form-control' %>
-  </div>
+                  <div class="form-group">
+                    <button class="btn-primary btn btn-primary btn-md btn-dark-raidators mx-0" type="submit"> Ajouter une adresses</button>
+                  </div>
 
-  <div class="form-group">
-  <button class="btn-primary" type="submit"> Ajouter une adresses</button>
-  </div>
-
-  <%end%>
+                <%end%>
+              </div>
+            </div>
+            <!--/.Form-->
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </div>
+      <!-- Content -->
+    </div>
+    <!--Fin background-->
+  </section>
+  <!-- Full Page Intro -->
+</div>
