still improving team/font/lisibility

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -46,7 +46,16 @@
   top: 70%;
   transform: translateY(-150%);
  }
- 
+
+.title-carousel-raidators{
+  font-size: 3rem;
+}
+
+.paragraph-carousel-raidators{
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', 'sans-serif';;
+}
 /* ------------NAVBAR------------ */
 
 .fa-bars {
@@ -116,6 +125,7 @@
   height: 100%;
   width: 100%;
 }
+
 /* ------------Simple rounder card------------ */
 .card-rounded-raidators{
   border-radius: 12px;
@@ -133,13 +143,16 @@ h2{
 h3{
   color: #1B221D;
 }
+
 p{
   font-family: 'Nunito Sans','lato','Open Sans';
   font-weight: normal;
-  font-size: 15px;
+  font-size: 1rem;
+  color: #1B221D;
   line-height: 1.6;
   justify-content: auto;
 }
+
 
 /* ------------background and color body------------ */
 .light-background-raidators{
@@ -181,7 +194,7 @@ section{
 }
 
 .banner-filter{
-  background-color: rgba(81, 103, 90, 0.5);
+  background-color: rgba(81, 103, 90, 0.8);
   position: absolute;
   top: 0;
   left: 0;
