--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -31,7 +31,7 @@
         <div class="col-lg-7">
 
           <!-- Category -->
-          <i class="fas fa-envelope-open-text"></i>
+          <i class="fas fa-envelope-open-text fa-2x"></i>
         
           <!-- Post title -->
           <h3 class="mb-3"><strong>Vous êtes Particulier  </strong></h3>
@@ -89,7 +89,7 @@
         <div class="col-lg-7">
 
           <!-- Category -->
-          <i class="fas fa-shopping-cart"></i>
+          <i class="fas fa-shopping-cart fa-2x"></i>
           
           <!-- Post title -->
           <h3 class="mb-3">Magasin</h3>
@@ -121,7 +121,7 @@
         <div class="col-lg-7">
 
           <!-- Category -->
-          <i class="fas fa-school"></i>
+          <i class="fas fa-school fa-2x"></i>
         
           <!-- Post title -->
           <h3 class="mb-3"><strong> Écoles</strong></h3>
