--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -57,7 +57,7 @@
               <%= image_tag("team/Ben.png", class:"rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
 
             </div>
-            <h3 >Benjamin</h3>
+            <h3>Benjamin</h3>
             <p class="mt-3 mb-4 text-muted">Nantais d’origine, il a toujours vadrouillé en parallèle de son travail. En plus, d'être passionné de voyage et aimant les relations humaines, c’est un grand sportif avide de nouvelles aventures.</p>
     
           </div>
@@ -80,10 +80,7 @@
     
         </div>
         <!-- Grid row -->
-
-        <button type="button" class="btn btn-success btn-raidators text-white p-10 mx-5">Nous suivre</button>
-
-        
+       <div class="target:"_blank"> <%= link_to "Nous suivre", "https://www.facebook.com/lesraidators/", class: "btn btn-success btn-raidators text-white p-10 mx-5", target:"_blank"%></div>
       </section>
       <!--Section: Content-->
     
