--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,6 +26,10 @@
       <li class="nav-item">
         <%= link_to "Articles", posts_path, class:"nav-link" %>
       </li>
+      <li class="nav-item">
+        <%= link_to "Contact", contact_path, class:"nav-link" %>
+      </li>
+
 
     </ul>
     <ul class="navbar-nav ml-auto">  
