--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -7,16 +7,20 @@
     <div class="col-lg-6 col-md-4 form-background-raidators text-center text-lg-left">
       
     <div class="container py-5 my-5">
-      <div class="row">
+      <div class="row justify-content-center">
 
         <!--Grid column-->
-        <div class="col-lg-5 col-md-12 mb-0 mb-md-0">
+        <div class="col-lg-7 col-md-12 mb-0 mb-md-0">
 
-          <h3 class="">Contact Us</h3>
+          <h3 class="">Contactez-nous</h3>
 
           <p class="text-muted">Vous avez des questions ou simplement besoin de plus d'informations ? Contactez-nous via le formulaire. </p>
 
-          <p><span class="mr-2">Email:</span><%= mail_to "Raidators@outlook.fr", "Nous contacter directement par mail" %></p>
+          <p class="mr-2">Email: Raidators@outlook.fr<br>
+          Emilie 06.67.02.16.46<br>
+          Hélène 06.59.18.54.21<br>
+          Benjamin 06.34.47.18.20<br>
+          </p>
 
         </div>
         <!--Grid column-->
@@ -26,54 +30,9 @@
 
           <!--Grid row-->
           <div class="row">
+          
+          <%= link_to "Messenger", "https://www.facebook.com/lesraidators/", class: "btn btn-info btn-contact text-white p-10 mx-5", target:"_blank"%>
 
-            <!--Grid column-->
-          <div class="col-md-6">
-
-              <!-- Material outline input -->
-              <div class="md-form md-outline mb-0  ">
-                <input type="text" id="form-first-name" class="form-control form-control-raidators">
-                <label for="form-first-name">First name</label>
-              </div>
-
-            </div>
-            <!--Grid column-->
-
-            <!--Grid column-->
-            <div class="col-md-6">
-
-              <!-- Material outline input -->
-              <div class="md-form  mb-0 ">
-                <input type="text" id="form-last-name" class="form-control form-control-raidators">
-                <label for="form-last-name">Last name</label>
-              </div>
-
-            </div>
-            <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
-
-          <!-- Material outline input -->
-          <div class="md-form  mt-3 ">
-            <input type="email" id="form-email" class="form-control form-control-raidators">
-            <label for="form-email">E-mail</label>
-          </div>
-
-          <!-- Material outline input -->
-          <div class="md-form ">
-            <input type="text" id="form-subject" class="form-control form-control-raidators">
-            <label for="form-subject">Subject</label>
-          </div>
-
-          <!--Material textarea-->
-          <div class="md-form mb-3">
-            <textarea id="form-message" class="md-textarea form-control form-control-raidators" rows="3"></textarea>
-            <label for="form-message">How we can help?</label>
-          </div>
-
-          <div class="actions text-center my-3">
-            <%= submit_tag "Send Email", class:"btn btn-primary btn-dark-raidators" %>
           </div>
 
         </div>
