--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -259,7 +259,7 @@
             La carrosserie de la 205 est réservée aux encarts publicitaires de nos sponsors, avec des emplacements différents selon le type de partenariat. Votre entreprise peut choisir l'emplacement qui lui convient, parmi ceux disponibles et être visible à travers 20 pays et 10 capitales.
           </p>
           <!-- Read more button -->
-          <%= link_to 'Découvrir la voiture et ses emplacements disponibles', asset_path('partnership/Dossier_sponsoring_Raidators.pdf'),class:"btn btn-success btn-raidators"%>
+          <%= link_to 'Découvrir la voiture et ses emplacements disponibles', car_path, class:"btn btn-success btn-raidators"%>
         </div>
         <!-- Grid column -->
   
