--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -54,7 +54,8 @@
 .paragraph-carousel-raidators{
   font-size: 1rem;
   font-weight: bold;
-  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', 'sans-serif';;
+  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', 'sans-serif';
+  color: white;
 }
 /* ------------NAVBAR------------ */
 
