--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,6 +31,7 @@
                       <% else %>
                         <%= link_to "Ajouter à mon panier", new_user_session_path, class:"btn btn-success btn-raidators btn-md  mx-0" %>
                       <% end %>
+                      <p> <%= link_to "retour aux dons", products_path, class:"btn btn-outline btn-light-raidators btn-md btn-rounded my-2" %></p>
                     </div>
                     <!--Grid column-->
                   </div>
