--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
         <%= link_to "L'équipe", equipe_path, class:"nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Articles", posts_path, class:"nav-link" %>
+        <%= link_to "Blog", posts_path, class:"nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Contact", contact_path, class:"nav-link" %>
