active storage stored

--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <% @order.join_order_product.each do |myorder| %>
-    <%= product.image_url %>
+    <%= product.avatar %>
     <%= product.title %>
     <%= product.price %>
   <%end>
