--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,8 +19,8 @@
 
               <!-- Card image -->
               <div class="view view-cascade overlay">
-                <%= @post.image_url %>
-                  <div class="mask rgba-white-slight"></div>
+                <%= @post.avatar %>
+                <div class="mask rgba-white-slight"></div>
               </div>
 
               <!-- Card content -->
