--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -21,7 +21,7 @@
                     <!--Grid column-->
                     <div class="col-md-5 mb-4">
                       <hr class="mb-5">
-                      <%= image_tag myproduct.product.image_url, width: "100%", class:"card-img-top card-rounded-raidators", alt:"Card image cap" %> 
+                      <%= image_tag myproduct.avatar, width: "100%", class:"card-img-top card-rounded-raidators", alt:"Card image cap" %> 
                     </div>
                     <!--Grid column-->
                     <div class="col-md-7 mb-4">
