--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,41 +1,54 @@
-<html>
-<body>
+<% content_for :title, " Nouveau produit | Raidators" %>
 
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<!-- Main navigation -->
+<div class="container-fluid mt-3 mb-5 dark-background-raidators">
+  <!-- background -->
+  <div class="col-lg-6 col-md-4  mt-5 mb-5 form-background-raidators">
+    <!-- Content -->
+    <div class="container my-5">     
+      <h3 class="text-center pb-2">Créer un produit</h3>
+      <!--Grid row-->
+      <div class="row d-flex align-items-center justify-content-center form-background-raidators">
+        <!--Grid column-->
+        <div class="col-md-6 col-xl-8">
+          <!--Form-->
+          <div class="card">
+            <div class="card-body px-4">
 
+              <div class="container text-center my-5">
 
-<%= form_for @product do |f| %>
+                <%= form_for @product do |f| %>
 
-  <div class="form-group">
-  <%= f.text_field :title, placeholder: 'Titre', class:"form-control" %>
+                  <div class="form-group">
+                  <%= f.text_field :title, placeholder: 'Titre', class:"form-control" %>
+                  </div>
+
+                  <div class="form_group">
+                  <%= f.text_field :price, placeholder: 'Prix',  class: 'form-control' %>
+                  </div>
+
+                  <div class="form-group">
+                  <%= f.text_area :description, placeholder: 'Description', class: 'form-control' %>
+                  </div>
+                  
+                  <div>
+                    <h3>Ajouter une photo</h3>
+                    <%= f.label :avatar %>
+                    <%= f.file_field :avatar, class: 'form-control', accept: "image/png, image/gif, image/jpeg" %>
+                    <%= f.text_field :category, placeholder: 'Catégorie', class: 'form-control' %>
+                  </div>
+                  
+                  <div class="actions text-center my-3">
+                    <%= f.submit "Valider le don/produit", class:"btn btn-primary btn-dark-raidators" %>
+                  </div>
+
+                <%end%>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form_group">
-  <%= f.text_field :price, placeholder: 'Prix',  class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-  <%= f.text_area :description, placeholder: 'Description', class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= form_tag product_product_pictures_path(:product_id), multipart: true do %>
-    <%= file_field_tag :product_picture %>
-    <%= submit_tag "Ajouter" %>
-    <% end %>
-  </div>
-
-  <div class="form-group">
-  <%= f.text_field :category, placeholder: 'Catégorie', class: 'form-control' %>
-  </div>
-  
-  <div class="actions text-center my-3">
-  <%= f.submit "Valider le don/produit", class:"btn btn-primary btn-dark-raidators" %>
-  </div>
-
-  <%end%>
-  
-
-</body>
-</html>
+</div>
