--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,7 +18,7 @@
                     <!--Grid column-->
                     <div class="col-md-5 mb-4">
                       <hr class="mb-5">  
-                      <%= image_tag @product.image_url, width: "70%", class:"card-img-top card-rounded-raidators"  %> 
+                      <%= image_tag @product.avatar, width: "70%", class:"card-img-top card-rounded-raidators"  %> 
                     </div>
                     <!--Grid column-->
                     <div class="col-md-7 mb-4">
