evening commit - post view - new issue on active storage

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -273,7 +273,9 @@ width: 100%;
   height : 300px !important;
 }
 
-
+.post-avatar{
+  height: 20%;
+}
 /* --------------LIST_POSTS------------ */
 
 
